--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "dependencies": {
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
+        "p-limit": "^6.2.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
+        "react-dev-utils": "^12.0.1",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.1.0",
