--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react-typed": "^2.0.12",
         "sass": "^1.85.1",
         "typewriter-effect": "^2.18.2",
-        "web-vitals": "^3.1.1"
+        "web-vitals": "^3.1.1",
+        "yocto-queue": "^1.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
